--- a/turbo.json
+++ b/turbo.json
@@ -1,21 +1,21 @@
 {
-  "$schema": "https://turbo.build/schema.json",
-  "pipeline": {
-    "build": {
-      "outputs": ["build/**", "dist/**", ".next/**"],
-      "dependsOn": ["^build"]
-    },
-    "dev": {
-      "dependsOn": ["^build"],
-      "outputs": [".next/**"],
-      "inputs": ["src/**/*.tsx", "src/**/*.ts", "test/**/*.ts", "test/**/*.tsx"]
-    },
-    "release": {
-      "outputs": ["build/**"],
-      "dependsOn": ["^build"]
-    },
-    "lint": {
-      "outputs": []
+    "$schema": "https://turbo.build/schema.json",
+    "pipeline": {
+        "build": {
+            "outputs": ["build/**", ".next/**"],
+            "dependsOn": ["^build"]
+        },
+        "dev": {
+            "dependsOn": ["^build"],
+            "outputs": [".next/**"],
+            "inputs": ["src/**/*.tsx", "src/**/*.ts"]
+        },
+        "release": {
+            "outputs": ["build/**"],
+            "dependsOn": ["^build"]
+        },
+        "lint": {
+            "outputs": []
+        }
     }
-  }
 }
