--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -1,6 +1,6 @@
 {
     "name": "atlr.kit",
-    "version": "0.1.0",
+    "version": "0.1.2",
     "license": "MIT",
     "packageManager": "yarn@3.2.2",
     "type": "module",
@@ -50,6 +50,14 @@
         "@types/node": "^18.11.18",
         "@types/react": "^18.0.27",
         "@types/react-dom": "^18.0.10",
+        "@typescript-eslint/eslint-plugin": "^5.49.0",
+        "@typescript-eslint/parser": "^5.49.0",
+        "eslint": "^8.32.0",
+        "eslint-config-prettier": "^8.6.0",
+        "eslint-import-resolver-typescript": "^3.5.3",
+        "eslint-plugin-react": "^7.32.1",
+        "eslint-plugin-simple-import-sort": "^9.0.0",
+        "prettier": "^2.8.3",
         "rollup": "^3.10.0",
         "rollup-plugin-peer-deps-external": "^2.2.4",
         "rollup-plugin-typescript2": "^0.34.1",
