--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -21,6 +21,10 @@
         "dev:release": "npm publish --access private",
         "pretty": "prettier --write src/**/*.{ts,tsx,js,jsx,json,css,md}"
     },
+    "peerDependencies": {
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2"
+    },
     "dependencies": {
         "@radix-ui/react-accordion": "^1.1.0",
         "@radix-ui/react-checkbox": "^1.0.1",
