--- a/packages/eslint-config-kit/package.json
+++ b/packages/eslint-config-kit/package.json
@@ -11,6 +11,7 @@
         "eslint-config-prettier": "^8.6.0",
         "eslint-config-turbo": "latest",
         "eslint-import-resolver-typescript": "^3.5.3",
+        "eslint-plugin-import": "^2.27.5",
         "eslint-plugin-react": "^7.32.1",
         "eslint-plugin-simple-import-sort": "^10.0.0"
     },
