--- a/packages/kit/.gitignore
+++ b/packages/kit/.gitignore
@@ -19,12 +19,9 @@ yarn.lock
 # vscode
 .vscode/
 
-/node_modules
+node_modules/
 package-lock.json
 .DS_Store
-
-.DS_Store
-node_modules
 
 *.log
 .next
