--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "atlr.kit",
-  "version": "0.3.46",
+  "version": "0.3.47",
   "license": "MIT",
   "packageManager": "yarn@3.2.2",
   "type": "module",
@@ -48,7 +48,8 @@
     "@stitches/react": "^1.2.8",
     "copy-to-clipboard": "^3.3.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-player": "^2.11.0"
   },
   "devDependencies": {
     "@rollup/plugin-terser": "^0.3.0",
@@ -61,6 +62,7 @@
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-typescript2": "^0.34.1",
+    "throttle-debounce": "^5.0.0",
     "typescript": "^4.9.5"
   },
   "prettierIgnore": [
