--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -48,6 +48,7 @@
     "@radix-ui/react-tooltip": "^1.0.3",
     "@stitches/react": "^1.2.8",
     "copy-to-clipboard": "^3.3.3",
+    "rc-drawer": "^6.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.11.0"
